# janua

./: .babelrc  .cursorignore  .dockerignore  .enclii.yml  .env.example  .env.production.example  .eslintrc.json  .gitignore  .npmrc  .nycrc.json  .railpack.json  AGENTS.md  AI_CONTEXT.md  ANALYTICS_REFACTORING_PROGRESS.md  API_REFERENCE.md  API_SPECIFICATION.md  ARCHITECTURAL_FIX_REPORT.md  CHANGELOG.md  CIRCUIT_BREAKER_TEST_RESULTS.md  CLAUDE.md  CLEANUP_REPORT.md  CODEBASE_METRICS.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_BETA_READINESS_REPORT.md  CONTRIBUTING.md  DEPENDABOT_SWEEP_2026-04-18.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.admin  Dockerfile.api  Dockerfile.dashboard  Dockerfile.docs  Dockerfile.landing  Dockerfile.website  ECOSYSTEM.md  ENTERPRISE_PRODUCTION_ROADMAP.md  Makefile  OPTIMIZATION_TEST_RESULTS.md  PHASE_1_COMPLETION_SUMMARY.md  (+32 more)
apps/api/: .env.example  .gitignore  Dockerfile  README.md  TECHNICAL_DEBT_CLEANUP_COMPLETION_REPORT.md  alembic.ini  coverage.json  database_optimization.sql  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  validate_optimizations.py
apps/api/.serena/: project.yml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 000_init.py  001_system_settings.py  002_add_oauth_client_audience.py  003_add_product_tiers.py  004_add_guest_invites.py  005_set_tezca_client_audience.py  006_add_api_key_rate_limit_and_revoked.py  007_add_user_entitlements.py  008_connected_accounts.py  009_fix_table_permissions.py  010_add_oauth_clients.py
apps/api/app/: __init__.py  analytics.py  beta_auth.py  config.py  database.py  dependencies.py  exceptions.py  main.py  models.py
apps/api/app/alerting/: __init__.py  alert_system.py  alert_system_refactored.py  manager.py  metrics.py  models.py
apps/api/app/auth/: router.py  router_completed.py
apps/api/app/compliance/: __init__.py  audit.py  dashboard.py  incident.py  monitor.py  policies.py  privacy.py  sla.py  support.py
apps/api/app/core/: audit_logger.py  caching.py  database.py  database_manager.py  encryption.py  error_handling.py  error_logging.py  errors.py  events.py  exceptions.py  jwt_manager.py  logger.py  logging.py  performance.py  rbac_engine.py  redis.py  redis_circuit_breaker.py  redis_config.py  scalability.py  secrets_provider.py  tenant_context.py  test_config.py  url_security.py  webhook_dispatcher.py
apps/api/app/docs/: api_documentation.py
apps/api/app/enterprise/: enterprise_features.py
apps/api/app/graphql/: schema.py
apps/api/app/infrastructure/: database_replication.py  redis_cluster.py
apps/api/app/logging/: log_analyzer.py  structured_logger.py
apps/api/app/middleware/: api_key_auth.py  apm_middleware.py  dynamic_cors.py  global_rate_limit.py  input_validation.py  logging_middleware.py  performance_tracking.py  rate_limit.py  security_headers.py
apps/api/app/models/: __init__.py  billing.py  compliance.py  connected_account.py  enterprise.py  invitation.py  iot.py  localization.py  migration.py  policy.py  sso.py  subscription.py  system_settings.py  token.py  types.py  user.py  white_label.py  zero_trust.py
apps/api/app/monitoring/: apm.py  apm_integration.py  metrics.py
apps/api/app/routers/: billing.py  webhooks.py
apps/api/app/schemas/: api_key.py  internal.py  oauth_client.py  sdk_models.py  token.py
apps/api/app/sdk/: __init__.py  authentication.py  client_base.py  documentation.py  error_handling.py  response_handlers.py  versioning.py
apps/api/app/security/: automated_security_scanner.py  pen_test_framework.py  rate_limiter.py  threat_detection.py  waf.py
apps/api/app/services/: account_lockout_service.py  admin_notifications.py  api_key_service.py  audit_logger.py  audit_service.py  auth.py  auth_service.py  billing_service.py  billing_webhooks.py  cache.py  compliance_service.py  compliance_service_complete.py  connected_account_service.py  consent_service.py  credential_rotation_service.py  device_verification_service.py  distributed_session_manager.py  email.py  (+22 more)
apps/api/claudedocs/: HANDOFF-v0.1.0-stability-sprint.md  coverage_action_plan.md  immediate_fixes.md  integration_test_suite_summary.md  rbac_table_conflict_resolution.md  sqlalchemy-migration-complete.md  test_coverage_analysis.md  test_coverage_summary.md  v0.1.0-ecosystem-audit.md
apps/api/docs/: COVERAGE_AUDIT_2026-01-24.md  FAQ.md
apps/api/janua/: __init__.py  cli.py  middleware.py
apps/api/migrations/: add_missing_fields.sql  add_webhook_tables.sql
apps/api/scripts/: apply_database_optimization.py  backup-database.sh  cache_metrics_collector.py  convert_tests_to_functions.py  database_query_monitor.py  deploy.sh  enterprise-onboarding-validation.py  fix-and-run-tests.sh  fix_all_tests.py  fix_commas.py  fix_test_fixtures.py  fix_test_methods_static.py  increase-coverage.py  load_testing_framework.py  monitoring-integration-check.py  phase3_performance_validation.py  production_load_testing.py  run-all-validations.sh  security-compliance-audit.py  security_hardening_validation.py  seed_core_clients.py  seed_ecosystem_clients.py  test-all-sdks.js  test-sdks.js  test-security-routers.sh  validate-deployment.sh  validate-enterprise-readiness.py  validate-test-health.py  validate_compliance_implementation.py  validate_compliance_simple.py  validate_performance.py
apps/api/tests/: TEST_PATTERNS.md  __init__.py  conftest.py  conftest_integration.py  test_100_coverage.py  test_100_coverage_alert_system.py  test_100_coverage_models_sso.py  test_100_coverage_validation.py  test_100_percent_coverage_comprehensive.py  test_auth_coverage.py  test_compliance_boost.py  test_comprehensive_integration.py  test_coverage_achievement_report.md  test_coverage_boost.py  test_coverage_final_report.md  test_enterprise_features.py  test_high_impact_modules.py  test_improve_partial_coverage.py  test_maximum_coverage_mocked.py  test_oauth_boost.py  test_simple_coverage_boost.py  test_ultimate_100_coverage.py  test_zero_coverage_comprehensive.py  test_zero_coverage_modules.py  test_zero_coverage_simplified.py
(+1227 files in other folders)
