[build-system]
requires = ["hatchling>=1.17.0"]
build-backend = "hatchling.build"

[project]
name = "janua"
dynamic = ["version"]
description = "Enterprise-grade authentication and user management platform"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Janua Team", email = "team@janua.dev"},
]
maintainers = [
    {name = "Janua Team", email = "team@janua.dev"},
]
keywords = [
    "authentication", "authorization", "user-management", "enterprise",
    "sso", "oauth", "saml", "rbac", "multi-tenant", "fastapi"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
requires-python = ">=3.9"
dependencies = [
    # Core Framework
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",

    # Data Validation & Settings
    "pydantic[email]>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",

    # Database
    "sqlalchemy>=2.0.23,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "alembic>=1.12.0,<2.0.0",

    # Authentication & Security
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "pyotp>=2.9.0,<3.0.0",
    "qrcode>=7.4.0,<8.0.0",
    "webauthn>=2.0.0,<3.0.0",

    # Caching
    "redis>=5.0.1,<6.0.0",
    "aioredis>=2.0.1,<3.0.0",

    # External Integrations
    "httpx>=0.25.0,<1.0.0",
    "aiohttp>=3.9.0,<4.0.0",

    # Utilities
    "python-decouple>=3.8,<4.0.0",
    "structlog>=24.1.0,<25.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "pytz>=2023.3",
    "psutil>=5.9.0,<6.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "python-json-logger>=2.0.7,<3.0.0",
]

[project.optional-dependencies]
# Email providers
email = [
    "resend>=0.8.0,<1.0.0",
]

# SSO protocols
sso = [
    "python-saml>=1.15.0,<2.0.0",
    "onelogin>=1.0.0,<2.0.0",
    "lxml>=4.9.0,<5.0.0",
]

# Development tools
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "black>=23.11.0,<25.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.7.0,<2.0.0",
    "pre-commit>=3.5.0,<4.0.0",
]

# All optional dependencies
all = [
    "janua[email,sso,dev]"
]

[project.urls]
Homepage = "https://janua.dev"
Documentation = "https://docs.janua.dev"
Repository = "https://github.com/madfam-org/janua"
"Bug Tracker" = "https://github.com/madfam-org/janua/issues"
Changelog = "https://github.com/madfam-org/janua/blob/main/CHANGELOG.md"

[project.scripts]
janua = "janua.cli:cli_main"

[project.entry-points."fastapi.middleware"]
janua = "janua.middleware:get_middleware_stack"

[project.entry-points."janua.auth_providers"]
jwt = "janua.auth.providers.jwt:JWTAuthProvider"
oauth = "janua.auth.providers.oauth:OAuthProvider"
saml = "janua.auth.providers.saml:SAMLProvider"
webauthn = "janua.auth.providers.webauthn:WebAuthnProvider"

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/alembic",
    "/requirements*.txt",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]
exclude = [
    "/.pytest_cache",
    "/tests/coverage",
    "**/__pycache__",
    "**/*.pyc",
    "/.env*",
    "/claudedocs",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "janua"]

# Development Tools Configuration
[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise exceptions with `raise ... from err` - TODO: fix in future cleanup
    "C901",  # too complex
    "UP006", # use `X | Y` instead of `Union[X, Y]` - modernization, not error
    "UP035", # deprecated typing imports - modernization, not error
    "UP045", # use `X | None` instead of `Optional[X]` - modernization, not error
    "E402",  # module level import not at top - common with patches/mocks
    "E712",  # comparison to True - intentional in SQLAlchemy queries
    "B007",  # loop control variable not used - minor style issue
    "W291",  # trailing whitespace - handled by formatter
    "W293",  # blank line contains whitespace - handled by formatter
    "B024",  # abstract class without abstract methods - by design
    "B019",  # lru_cache on methods - intentional for caching
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"alembic/**" = ["F401", "F403"]
"tests/**" = ["F401", "F403"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "sendgrid.*",
    "postmark.*",
    "webauthn.*",
    "saml2.*",
    "onelogin.*",
    "stripe.*",
    "plotly.*",
    "locust.*",
    "conekta.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "-ra",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "auth: marks tests related to authentication",
    "api: marks tests related to API endpoints",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
